src/snapshots/cornercase__ui__tests__workspaces_column__renders_a_workspace_being_removed_without_its_buttons.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)               │  login   removing…      │                                          "
"                               │  └                      │                                          "
"  + new                        │                         │                                          "
"                               │  main                   │                                          "
"                               │▌ ├ zsh                  │                no tab open               "
"                               │  └ + tab                │         + tab opens a shell here         "
"                               │                         │                                          "
"                               │  + new workspace        │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │  files            todo  │                                          "
"  quit                         │                         │                                          "
