src/snapshots/cornercase__ui__tests__workspaces_column__renders_commits_to_pull_before_the_close_button.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)               │  login            ↓3  × │                                          "
"                               │▌ ├ claude               │                                          "
"  + new project                │  ├ nvim                 │                                          "
"                               │  └ + tab                │                                          "
"                               │                         │                no tab open               "
"                               │  main             ↓1    │         + tab opens a shell here         "
"                               │  ├ zsh                  │                                          "
"                               │  └ + tab                │                                          "
"                               │                         │                                          "
"                               │  + new workspace        │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │  files            todo  │                                          "
"  quit                         │                         │                                          "
