src/snapshots/cornercase__ui__tests__workspaces_column__renders_the_workspaces_of_the_active_project.snap
---
source: src/ui.rs
expression: render(&with_workspaces(Some(0))).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)               │  login                  │                                          "
"                               │▌ ├ claude               │                                          "
"  + new project                │  ├ nvim                 │                                          "
"                               │  └ + tab                │                                          "
"                               │                         │                no tab open               "
"                               │  main                   │         + tab opens a shell here         "
"                               │  ├ zsh                  │                                          "
"                               │  └ + tab                │                                          "
"                               │                         │                                          "
"                               │  + new workspace        │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │  files            todo  │                                          "
"  quit                         │                         │                                          "
